# wordscapes

./: .gitignore  README.md  pyproject.toml  words.py
wordscapes/: __main__.py  solver.py
