[tool.poetry]
name = "wordscapes"
version = "0.1.0"
description = "Wordscapes Solver"
authors = ["Alex Tarrell <alextarrell@gmail.com>"]
include = ["word_list.txt"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
wordscapes = 'wordscapes.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
